--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			<div class="inf">
 				<div class="footer2">
 					<a href="#">
-						<img src="/img/skype.png">
+						<img src="img/skype.png">
 					</a>
 				</div>
 				<div class="footer3" style="">
@@ -135,7 +135,7 @@
 				</div>
 				<div class="footer4" style="">
 					<a href="#" target="_blank">
-						<img src="/img/atest_webmoney.png" alt="">
+						<img src="img/atest_webmoney.png" alt="">
 						<br/>
 					</a>
 				</div>
