--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
 	</div>
 	<div class="container">
 		<div class="main">
-			<img src="img/main_img1.jpg" alt="" class="main_img">
+			<div class="main_img">
 			<div class="quad">
-				<div id="day">
-				</div>
+				<div id="day"></div>
 				<div class="month_years">
-					<div id="month">
-					</div>
-					<div id="year">
-					</div>
+					<div id="month"></div>
+					<div id="year"></div>
 				</div>
+			</div>
 			</div>
 			<div class="right_menu">
 				<ul class="net-icons">
